--- a/libs/puku/pyproject.toml
+++ b/libs/puku/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 dependencies = [
 ]
 
@@ -15,3 +15,13 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+langchain-core = "^0.3.34"
+puku-core = {path = "../core", develop = true}
+
+
+[tool.poetry.group.test.dependencies]
+langchain-core = "^0.3.34"
+pytest = "^8.3.4"
+
