--- a/libs/core/pyproject.toml
+++ b/libs/core/pyproject.toml
@@ -7,15 +7,13 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.12,<4.0"
+requires-python = ">=3.12"
 dependencies = [
+    "langchain-core (>=0.3.61,<0.4.0)",
+    "langgraph (>=0.4.7,<0.5.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.group.dev.dependencies]
-langchain-core = "^0.3.34"
-
