--- a/libs/puku/pyproject.toml
+++ b/libs/puku/pyproject.toml
@@ -9,6 +9,9 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.12,<4.0"
 dependencies = [
+    "puku-core @ file:///home/curlink/workspace/projects/puku/libs/core",
+    "langchain-deepseek (>=0.1.3,<0.2.0)",
+    "langchain (>=0.3.25,<0.4.0)"
 ]
 
 
@@ -16,12 +19,5 @@ dependencies = [
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry.group.dev.dependencies]
-langchain-core = "^0.3.34"
-puku-core = {path = "../core", develop = true}
-
-
-[tool.poetry.group.test.dependencies]
-langchain-core = "^0.3.34"
-pytest = "^8.3.4"
-
+[tool.poetry.dependencies]
+puku-core = {develop = true}
