--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.12,<4.0"
 dependencies = [
+    "puku-core @ file:///home/curlink/workspace/projects/puku/libs/core",
+    "puku @ file:///home/curlink/workspace/projects/puku/libs/puku"
 ]
 
 
@@ -16,7 +18,6 @@ dependencies = [
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry.group.dev.dependencies]
-puku-core = {path = "libs/core"}
-puku = {path = "libs/puku"}
-
+[tool.poetry.dependencies]
+puku-core = {develop = true}
+puku = {develop = true}
