add: knowledge_trees

--- a/libs/core/pyproject.toml
+++ b/libs/core/pyproject.toml
@@ -7,13 +7,18 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 dependencies = [
     "langchain-core (>=0.3.61,<0.4.0)",
-    "langgraph (>=0.4.7,<0.5.0)"
+    "langgraph (>=0.4.7,<0.5.0)",
+    "marko @ git+https://github.com/curlinkw/marko.git@develop"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.4.1"
+
