--- a/libs/puku/pyproject.toml
+++ b/libs/puku/pyproject.toml
@@ -11,7 +11,11 @@ requires-python = ">=3.12,<4.0"
 dependencies = [
     "puku-core @ file:///home/curlink/workspace/projects/puku/libs/core",
     "langchain-deepseek (>=0.1.3,<0.2.0)",
-    "langchain (>=0.3.25,<0.4.0)"
+    "langchain (>=0.3.25,<0.4.0)",
+    "langchain-experimental (>=0.3.4,<0.4.0)",
+    "langchain-neo4j (>=0.4.0,<0.5.0)",
+    "langgraph (>=0.4.7,<0.5.0)",
+    "docker (>=7.1.0,<8.0.0)",
 ]
 
 
