--- a/libs/deployment/pyproject.toml
+++ b/libs/deployment/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "onnxruntime-extensions (>=0.14.0,<0.15.0)",
     "spox (>=0.16.0,<0.17.0)",
     "puku-core @ file:///home/curlink/workspace/projects/puku/libs/core",
+    "docker (>=7.1.0,<8.0.0)",
 ]
 
 
