--- a/libs/core/pyproject.toml
+++ b/libs/core/pyproject.toml
@@ -11,7 +11,8 @@ requires-python = ">=3.12,<4.0"
 dependencies = [
     "langchain-core (>=0.3.61,<0.4.0)",
     "langgraph (>=0.4.7,<0.5.0)",
-    "marko @ git+https://github.com/curlinkw/marko.git@develop"
+    "marko @ git+https://github.com/curlinkw/marko.git@develop",
+    "numpy (>=2.3.1,<3.0.0)"
 ]
 
 
