--- a/libs/puku/pyproject.toml
+++ b/libs/puku/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "langchain-neo4j (>=0.4.0,<0.5.0)",
     "langgraph (>=0.4.7,<0.5.0)",
     "docker (>=7.1.0,<8.0.0)",
-    "tritonclient (>=2.59.0,<3.0.0)",
+    "tritonclient[grpc] (>=2.59.0,<3.0.0)",
 ]
 
 
