--- a/libs/puku/poetry.toml
+++ b/libs/puku/poetry.toml
@@ -1,2 +1,13 @@
 [virtualenvs]
 in-project = true
+
+[tool.mkdocstrings]
+handlers = {
+  python = {
+    extra_paths = [
+      "libs/puku/puku",
+      "libs/core/puku_core"
+      "libs/deployment/puku_deployment"
+    ]
+  }
+}
