--- a/libs/puku/pyproject.toml
+++ b/libs/puku/pyproject.toml
@@ -9,7 +9,7 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.12,<4.0"
 dependencies = [
-    "puku-core @ file:///home/curlinkw/workspace/projects/puku/libs/core",
+    "puku-core @ ../core",
     "langchain-deepseek (>=0.1.3,<0.2.0)",
     "langchain (>=0.3.25,<0.4.0)",
     "langchain-experimental (>=0.3.4,<0.4.0)",
