--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,14 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.12,<4.0"
 dependencies = [
-    "puku-core @ file:///home/curlink/workspace/projects/puku/libs/core",
-    "puku @ file:///home/curlink/workspace/projects/puku/libs/puku"
+    "puku-core @ libs/core",
+    "puku @ libs/puku",
+    "puku-deployment @ libs/deployment",
+    "mkdocs (>=1.6.1,<2.0.0)",
+    "mkdocs-material (>=9.6.15,<10.0.0)",
+    "mkdocstrings[python] (>=0.29.1,<0.30.0)",
+    "mkdocs-autorefs (>=1.4.2,<2.0.0)",
+    "mkdocs-gen-files (>=0.5.0,<0.6.0)",
 ]
 
 
