--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "mkdocstrings[python] (>=0.29.1,<0.30.0)",
     "mkdocs-autorefs (>=1.4.2,<2.0.0)",
     "mkdocs-gen-files (>=0.5.0,<0.6.0)",
+    "mlflow (>=3.1.1,<4.0.0)",
 ]
 
 
