--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "mkdocs-autorefs (>=1.4.2,<2.0.0)",
     "mkdocs-gen-files (>=0.5.0,<0.6.0)",
     "mlflow (>=3.1.1,<4.0.0)",
+    "grandalf (>=0.8,<0.9)",
 ]
 
 
